backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doodly
spec:
  replicas: 1 # pods
  selector:
    matchLabels:
      app: doodly
  template:
    metadata:
      labels:
        app: doodly
    spec:
      containers:
        - name: doodly
          image: us-west1-docker.pkg.dev/cs144-25s-team16/doodly-gae-repo/doodly:v1
          imagePullPolicy: Always # always pull the latest image
          ports:
            - containerPort: 3001 # port that container listens on
