backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doodly-service
spec:
  type: LoadBalancer
  selector:
    app: doodly
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
